testdata/zkc/invalid/basic_invalid_06.zkc
;;error:3:13-14:braces required
function f(u8 x) -> (u8 r) {
  r = x + x * x
  return
}
